--- a/Reordered Draft Report.Rmd
+++ b/Reordered Draft Report.Rmd
@@ -82,7 +82,7 @@ library(dplyr)
 library(tidyverse)
 r_refs("r-references.bib")
 knitr::opts_chunk$set(echo = FALSE, comment = "", cache = TRUE, fig.align = "center")
-setwd("~/Universiteit Utrecht/2020-2021/Semester 1/Survey Data Analysis/COVID Assignment")
+setwd("C:/Users/sande/OneDrive/Documenten/M&S")
 dat <- readRDS("covid cases waste + tests.RDS")
 ```
 
@@ -463,45 +463,47 @@ x4 <- paste(
 differenceCalculator2(used_dates)
 ```
 
+As we mentioned in the literature review, infected people have RNA particles in their stool that end up in the sewage. If more people are infected we would expect that there are more RNA particles in the sewage. Then, the total amount of RNA particles in the sewage per day should follow the same course as the total number of infections per day over time.  To find out if this holds for the epidemic in the Netherlands we plotted the total amount of RNA particles found per day. The figure is shown below. The shape of the plot is different from the shape of the plot of the total number of infections per day. So the total amount of RNA particles in the sewage per day does not follow the same course as the total number of infections per day over time.
+
 ```{r fig.width=10, echo = FALSE}
 
 used_dates$TP_RNA.flow.per.100000 <- as.numeric(used_dates$TP_RNA.flow.per.100000)
 
-virusCalculator_new <- function(used_dates) {
-  #creates a vector containing the unique values of the dates column of data. So vector with dates from september the seventh
-  #till october the tenth
+virusCalculator_new_totals <- function(used_dates) {
+  #creates a vector containing the unique values of the dates column of data. So vector with dates from September the seventh
+  #till October the tenth
   dates <- unique(used_dates$newdate)
   #makes an empty numeric vector which length is equal to number of dates
-  means <- numeric(length(dates))
-  for (i in 1:length(means)) {
+  totals <- numeric(length(dates))
+  for (i in 1:length(totals)) {
     #puts all the data of a particular date into date_data. the particular date changes at each iteration.
     date_data <- filter(used_dates, newdate == dates[i])
     #delete rows if the water installation name is already in other row.
     df1 <- date_data[!duplicated(date_data[,c("SR_name","TP_code")]),]
-    #take the mean of the rna per 100000 column and store in means vector
-    means[i] <- mean(df1$TP_RNA.flow.per.100000, na.rm = TRUE)
+    #calculate total of the rna per 100000 column and store in totals vector
+    totals[i] <- sum(df1$TP_RNA.flow.per.100000, na.rm = TRUE)
   }
   #put date and means vector in dataframe.
-  means_frame <- as.data.frame(cbind(dates, means))
+  totals_frame <- as.data.frame(cbind(dates, totals))
   #define column names.
-  colnames(means_frame) <- c("Date", "Mean RNA flow per 100000")
+  colnames(totals_frame) <- c("Date", "Total RNA flow per 100000")
   #coerce the column into double precision vector.
-  means_frame$`Mean RNA flow per 100000` <- as.double(means_frame$`Mean RNA flow per 100000`)
+  totals_frame$`Total RNA flow per 100000` <- as.double(totals_frame$`Total RNA flow per 100000`)
   #create a barplot 
-  barplot(means_frame$`Mean RNA flow per 100000`, col='greenyellow', 
+  barplot(totals_frame$`Total RNA flow per 100000`, col='greenyellow', 
           xlab = 'Date', ylab = 'Mean RNA flow per 100,000 inhabitants', names.arg = dates)
-  return(means_frame)
+  return(totals_frame)
 }
 
 ```
 
 ```{r 4, results = 'hide', fig.align = "center", fig.cap = x5, fig.height = 4, fig.width = 5.5, fig.pos = "H"}
 x5 <- paste(
-    "Mean RNA flow per 100,000 inhabitants in the Netherlands per day")
-virusCalculator_new(used_dates)
+    "Total RNA flow per 100,000 inhabitants in the Netherlands per day")
+virusCalculator_new_totals(used_dates)
 ```
 
-The reason for the different shapes of the plot showing the mean RNA flow and the plot showing the increase in infections could be the fact that not all treatment plants report the RNA flow every day, and that the number of reporting treatment plants differs per day and per region. In order to explore this idea we plotted the number of installations from which a sample was taken over time. The figure below shows that the number of installations from which a sample is taken differs per day. The figure also shows that the maximum number of sewage water installations from which samples are taken lies somewhere around one hundred. Since there are more than three hundred installations from which a sample can be taken [@Riool], there is not a single day where a sample is taken from all installations. So every day, samples are taken from different installations that process waste water from different regions. If every region produced the same amount of RNA particles it would not matter that we do not observe each installation each day. Since we take the mean of the amount of RNA particles, the estimate would not be harmed by a missing installation. However, the figure that shows the mean number of RNA particles observed each day suggests that the estimate of the mean number of RNA particles is not correct. If it were correct, then the values would not fluctuate as much as they do now and would follow the trend of new infections more clearly. Thus, the plot supports our claim that the different shapes of the plot showing the mean RNA flow and the plot showing the increase in infections could be explained by the fact that not all treatment plants report the RNA flow every day, and that the number of reporting treatment plants differs per day and per region.
+Why does the total amount of RNA particles in the sewage per day not follow the same course as the total number of infections per day over time? One reason could be that there are days on which water samples are not taken from each installation. The plot below shows the number of installations from which a sample was taken per day. The figure below shows that the number of installations from which a sample is taken differs per day. The figure also shows that the maximum number of sewage water installations from which samples are taken lies somewhere around one hundred. Since there are more than three hundred installations from which a sample can be taken [@Riool], there is not a single day where a sample is taken from all installations.
 
 ```{r fig.width = 10, echo = FALSE}
 totalCalculator_installations <- function(sewer_data) {
@@ -533,6 +535,42 @@ totalCalculator_installations <- function(sewer_data) {
 x6 <- paste(
     "Number of installations per day")
 totalCalculator_installations(used_dates)
+```
+Then, maybe the mean number of RNA particles in the sewage per day does follow the same tendency as the number of infections over time. Below the plot of the mean number of RNA particles over time is shown. This plot also does not have the same shape as the plot of the number of infections per day. So the number of installations from which a sample was taken does not explain why the total amount of RNA particles does not have the same course as the number of infections over time. So something else is going on. 
+
+```{r}
+virusCalculator_new_means <- function(used_dates) {
+  #creates a vector containing the unique values of the dates column of data. So vector with dates from september the seventh
+  #till october the tenth
+  dates <- unique(used_dates$newdate)
+  #makes an empty numeric vector which length is equal to number of dates
+  means <- numeric(length(dates))
+  for (i in 1:length(means)) {
+    #puts all the data of a particular date into date_data. the particular date changes at each iteration.
+    date_data <- filter(used_dates, newdate == dates[i])
+    #delete rows if the water installation name is already in other row.
+    df1 <- date_data[!duplicated(date_data[,c("SR_name","TP_code")]),]
+    #take the mean of the rna per 100000 column and store in means vector
+    means[i] <- mean(df1$TP_RNA.flow.per.100000, na.rm = TRUE)
+  }
+  #put date and means vector in dataframe.
+  means_frame <- as.data.frame(cbind(dates, means))
+  #define column names.
+  colnames(means_frame) <- c("Date", "Mean RNA flow per 100000")
+  #coerce the column into double precision vector.
+  means_frame$`Mean RNA flow per 100000` <- as.double(means_frame$`Mean RNA flow per 100000`)
+  #create a barplot 
+  barplot(means_frame$`Mean RNA flow per 100000`, col='greenyellow', 
+          xlab = 'Date', ylab = 'Mean RNA flow per 100,000 inhabitants', names.arg = dates)
+  return(means_frame)
+}
+```
+
+
+```{r 4, results = 'hide', fig.align = "center", fig.cap = x7, fig.height = 4, fig.width = 5.5, fig.pos = "H"}
+x7 <- paste(
+    "Mean RNA flow per 100,000 inhabitants in the Netherlands per day")
+virusCalculator_new(used_dates)
 ```
 
 \subsection{What is the relationship between RNA particles and the total number of infections on one given moment?}
@@ -619,14 +657,14 @@ for (i in 1:(length(regions))) {
 
 ```
 
-```{r 6, results = 'hide', fig.align = "center", fig.cap = x7, fig.height = 4, fig.width = 5.5, fig.pos = "H"}
-x7 <- paste(
+```{r 6, results = 'hide', fig.align = "center", fig.cap = x8, fig.height = 4, fig.width = 5.5, fig.pos = "H"}
+x8 <- paste(
     "RNA flow per 100.000 inhabitants in the Netherlands over time")
 rnaWeighting(used_dates)
 ```
 
-```{r 7, results = 'hide', fig.align = "center", fig.cap = x8, fig.height = 4, fig.width = 5.5, fig.pos = "H"}
-x8 <- paste(
+```{r 7, results = 'hide', fig.align = "center", fig.cap = x9, fig.height = 4, fig.width = 5.5, fig.pos = "H"}
+x9 <- paste(
     "Relation between RNA flow and increase in infections for one timestamp")
 plot(day_frame$RNA.flow, day_frame$Reported, col = "red", pch = 19, xlab = "RNA flow", ylab = "Increase in number of infections")
      abline(lm(Reported ~ RNA.flow, data = day_frame), lwd = 2)
@@ -677,8 +715,8 @@ corr_frame$Date <- as.Date(corr_frame$Date)
 
 Figure \ref{fig:8} shows that the correlations fluctuate over time, which seems very interesting. If the data points would have formed a straight horizontal line, the estimation of the true number of infections in the Netherlands would have been more straightforward, since it would mean that the relationship between the RNA flow and the increase in infections would have been the same for every day. The mean correlation between the datapoints in this scatterplot is 0.33, which is a moderate positive correlation. This means that as the pandemic progresses, the relationship between the RNA flow and the increase in the number of infections becomes stronger. We have two hypotheses as to why this would be the case: it could be a result of increased consistency and precision in the measurements as we get more rigorous in reporting these data, or – as the number of cases has only increased over the period we analysed – it could mean that RNA flow becomes a better predictor of the total number of reported cases, as both measures have higher values.
 
-```{r 8, results = 'hide', fig.align = "center", fig.cap = x9, fig.height = 4, fig.width = 5.5, fig.pos = "H"}
-x9 <- paste(
+```{r 8, results = 'hide', fig.align = "center", fig.cap = x10, fig.height = 4, fig.width = 5.5, fig.pos = "H"}
+x10 <- paste(
     "Correlations between RNA flow and increase in infections over time")
 plot(x = corr_frame$Date, y = corr_frame$Correlation, col = "red", pch = 19, xlab = "Date", ylab = "Correlation")
 abline(lm(Correlation ~ Date, data = corr_frame), lwd = 2)
